--- a/Bayser-Portal/productos/css/basculas_precision.css
+++ b/Bayser-Portal/productos/css/basculas_precision.css
@@ -60,7 +60,7 @@ header nav ul li a{
     font-family: 'Baloo Thambi 2', cursive;
     position: relative;
     background: darkgreen(#2196f3,15);
-    text-transform: uppercase;
+    text-transform: initial;
 }
 
 header nav ul li a::before{
@@ -83,27 +83,25 @@ header nav ul li a:hover::before{
 }
 
 ul li ul li {
-
     float: left;
-    }
-    
-    
-    
-    ul li ul{
-        display: none;
-        position: relative;
-        width: 200px;
-        padding: 10px 15px;
-    
-    }
-    li:hover>ul{
-        display: block;
-    
-    }
+}
+        
+ul li ul{
+    display: none;
+    position: relative;
+    width: 200px;
+    padding: 10px 15px;
+}
+
+li:hover>ul{
+    display: block;
+}
+
 #body{
 	width: 100%;
 	height: 0px;
 }
+
 /*Icono de la empresa*/
 .logo{
     position: relative;
@@ -113,15 +111,14 @@ ul li ul li {
     left: 10px; 
 }
 
-    .logo .imgnav{
-           
-           float: left;
-            left: 10px;
-            width:100px;
-            height: 100%;
-            top: 3px;
-            margin-bottom: 5px;
-    } 
+.logo .imgnav{           
+    float: left;
+    left: 10px;
+    width:100px;
+    height: 100%;
+    top: 3px;
+    margin-bottom: 5px;
+} 
 
 header .btn_hamburger{
     display: none;
@@ -138,11 +135,10 @@ header .btn_hamburger{
 
 header .btn_hamburger div{
     width: 90%;
-    height: 7px;
-    border-radius: 3px;
+    height: 5px;
+    border-radius: 5px;
     background-color: white;
 }
-
 
 ul,ol{
 	list-style: none;	
@@ -245,7 +241,6 @@ ul,ol{
 .left{
 	left: 10px;
 }
-
 
 .right{
 	right: 10px;
@@ -412,7 +407,6 @@ h1{
 }
 
 /*-----------------------------------------------footer--------------------------------------------------*/
-/*455961-30383f*/
 
 footer {
     position: relative;
@@ -658,6 +652,50 @@ footer  hr{
 
 /*----------------------------------------------media query---------------------------------------*/
 @media screen and (min-width:320px){
+/*responsive del nav*/
+.logo .imgnav{
+    width: 6em;
+    height: 3em;
+}
+
+header nav ul li a{
+    width: 100vw;
+    font-size: 1em;
+}
+
+.logo{
+    left: 35.5vw;
+}
+
+header .btn_hamburger{
+    display: flex;
+    width: 2em;
+    height: 2em;
+    position: absolute;
+    top: 40px;
+    right: 15px;
+}
+
+header nav ul{
+    overflow: hidden;
+    width: 100vw;
+    transition: max-height 1s ease-in;    
+}
+    
+header nav ul.hidden{
+    max-height: 0vh;
+    transition: max-height 1s ease-in;
+}   
+
+header nav ul.hidden .btn_hamburger div:nth-child(1){
+    width: 60%;
+    transition: width 0.1s linear;
+}
+
+header nav ul.hidden .btn_hamburger div:nth-child(3){
+    width: 60%;
+    transition: width 0.1s linear;
+}
 /*Responsive del slider*/ 
 .contenedor{
     flex-basis: 100%;
@@ -808,7 +846,6 @@ footer  hr{
 }
      
 /*Responsive del slider*/   
-
 .matriz-basculas{
     display: flex;
     flex-direction: row;
@@ -952,17 +989,31 @@ footer{
     font-size:  20px;
     flex-basis: 100%;
 }
+}
 
-/*nav*/
+@media screen and (min-width:481px){
+/*responsive del nav*/
+.logo .imgnav{
+    width: 8em;
+    height: 5em;
+}
+
 header nav ul li a{
     width: 100vw;
+    font-size: 1.1em;
 }
+
 .logo{
-    left: 35.5vw;
+    left: 38vw;
 }
 
 header .btn_hamburger{
     display: flex;
+    width: 3em;
+    height: 3em;
+    position: absolute;
+    top: 50px;
+    right: 15px;
 }
 
 header nav ul{
@@ -970,7 +1021,7 @@ header nav ul{
     width: 100vw;
     transition: max-height 1s ease-in;    
 }
-
+    
 header nav ul.hidden{
     max-height: 0vh;
     transition: max-height 1s ease-in;
@@ -985,12 +1036,6 @@ header nav ul.hidden .btn_hamburger div:nth-child(3){
     width: 60%;
     transition: width 0.1s linear;
 }
-
-
-
-}
-
-@media screen and (min-width:481px){
 /*Responsive del slider*/ 
 .contenedor{
     flex-basis: 100%;
@@ -1232,8 +1277,7 @@ footer{
     justify-content: center;
     align-items: center;
 }
-    
-    
+     
 .informacion-horario{
     display: inline;
 }
@@ -1290,44 +1334,54 @@ footer{
     font-size:  20px;
     flex-basis: 100%;
 }
+}
 
-/*nav*/
+@media screen and (min-width:768px){
+/*responsive del nav*/
+.logo .imgnav{
+    width: 8.5em;
+    height: 5em;
+}
+
 header nav ul li a{
     width: 100vw;
+    font-size: 1.1em;
 }
 
 .logo{
-    left: 41vw;
+    left: 43.5vw;
 }
-
+    
 header .btn_hamburger{
     display: flex;
+    transition: width 0.5s ease-in;
+    width: 3em;
+    height: 3em;
+    position: absolute;
+    top: 50px;
+    right: 18px;
 }
-
+    
 header nav ul{
     overflow: hidden;
     width: 100vw;
     transition: max-height 1s ease-in;    
 }
-
+   
 header nav ul.hidden{
     max-height: 0vh;
     transition: max-height 1s ease-in;
 }   
-
+    
 header nav ul.hidden .btn_hamburger div:nth-child(1){
     width: 60%;
     transition: width 0.1s linear;
 }
-
+    
 header nav ul.hidden .btn_hamburger div:nth-child(3){
     width: 60%;
     transition: width 0.1s linear;
 }
-
-}
-
-@media screen and (min-width:768px){
 /*Responsive del slider*/ 
 .contenedor{
     flex-basis: 100%;
@@ -1478,8 +1532,6 @@ header nav ul.hidden .btn_hamburger div:nth-child(3){
 }
     
 /*Responsive del slider*/   
-
-
 .matriz-basculas{
     display: flex;
     flex-direction: row;
@@ -1586,47 +1638,70 @@ footer{
     font-size:  20px;
     flex-basis: 100%;
 }
-/*nav*/
-header nav ul li a{
-    width: 100vw;
-}
-    .logo{
-        left: 43.5vw;
-    }
-
-    header .btn_hamburger{
-        display: flex;
-        transition: width 0.5s ease-in;
-    }
-
-    header nav ul{
-        overflow: hidden;
-        width: 100vw;
-        transition: max-height 1s ease-in;    
-    }
-
-    header nav ul.hidden{
-        max-height: 0vh;
-        transition: max-height 1s ease-in;
-    }   
-
-    header nav ul.hidden .btn_hamburger div:nth-child(1){
-        width: 60%;
-        transition: width 0.1s linear;
-    }
-
-    header nav ul.hidden .btn_hamburger div:nth-child(3){
-        width: 60%;
-        transition: width 0.1s linear;
-    }
-
-
-
-
-
 }
 
 @media screen and (min-width:1025px){
+/*responsive del nav*/
+.logo .imgnav{
+    width: 6em;
+    height: 2.9em;
+}
+
+.col-3{
+    flex-basis: calc(100%/3);
+}
+
+/*nav*/
+        
+header nav ul li a{
+    width: 100%;
+    font-size: 18px;
+}
+
+header .btn_hamburger{
+    display: none;
+    overflow: hidden;
+}
+
+.logo{
+    left: 10px;
+}
+    
+header nav ul{
+    overflow: visible;
+    width: 100vw;
+    transition: max-height 1s ease-in;    
+}
+
+ul li ul li {
+    float: left;
+}
+                        
+ul li ul{
+    display: none;
+    position: relative;
+    width: 200px;
+    padding: 10px 15px;        
+}
+
+li:hover>ul{
+    display: block;        
+}
+
+header nav ul.hidden{
+    max-height: 100vh;
+    transition: max-height 1s ease-in;
+}   
+    
+header nav ul.hidden .btn_hamburger div:nth-child(1){
+    width: 60%;
+    transition: width 0.1s linear;
+}
+    
+header nav ul.hidden .btn_hamburger div:nth-child(3){
+    width: 60%;
+    transition: width 0.1s linear;
+}
 /*Responsive del slider*/ 
 .contenedor{
     flex-basis: 100%;
@@ -1786,7 +1861,6 @@ header nav ul li a{
 
 /*Responsive del slider*/   
 
-
 .matriz-basculas{
     display: flex;
     flex-direction: row;
@@ -1915,60 +1989,6 @@ footer{
     font-size:  25px;
     flex-basis: 100%;
 }
-
-
-/*nav*/
-
-header nav ul li a{
-        width: 100%;
-    }
-
-    header .btn_hamburger{
-        display: none;
-        overflow: hidden;
-    }
-        .logo{
-            left: 10px;
-        }
-    
-        header nav ul{
-            overflow: visible;
-            width: 100vw;
-            transition: max-height 1s ease-in;    
-        }
-        ul li ul li {
-            float: left;
-            }
-            
-            
-            
-            ul li ul{
-                display: none;
-                position: relative;
-                width: 200px;
-                padding: 10px 15px;
-            
-            }
-            li:hover>ul{
-                display: block;
-            
-            }
-        header nav ul.hidden{
-            max-height: 100vh;
-            transition: max-height 1s ease-in;
-        }   
-    
-        header nav ul.hidden .btn_hamburger div:nth-child(1){
-            width: 60%;
-            transition: width 0.1s linear;
-        }
-    
-        header nav ul.hidden .btn_hamburger div:nth-child(3){
-            width: 60%;
-            transition: width 0.1s linear;
-        }
-
-
 }
 
 
