--- a/Bayser-Portal/quienes_somos/quienes.css
+++ b/Bayser-Portal/quienes_somos/quienes.css
@@ -4,7 +4,6 @@
 	padding: 0;
 }
 
-
 body{
     margin: 0;
     padding:  0;
@@ -12,7 +11,6 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     padding: 0%;
 }
-
     
 header{
     background-image: url(img/form_fondo_barra.jpg);
@@ -61,7 +59,7 @@ header nav ul li a{
     font-family: 'Baloo Thambi 2', cursive;
     position: relative;
     background: darkgreen(#2196f3,15);
-    text-transform: uppercase;
+    text-transform: initial;
 }
 
 header nav ul li a::before{
@@ -84,23 +82,20 @@ header nav ul li a:hover::before{
 }
 
 ul li ul li {
-
     float: left;
-    }
-    
-    
-    
-    ul li ul{
-        display: none;
-        position: relative;
-        width: 200px;
-        padding: 10px 15px;
-    
-    }
-    li:hover>ul{
-        display: block;
-    
-    }
+}
+        
+ul li ul{
+    display: none;
+    position: relative;
+    width: 200px;
+    padding: 10px 15px;
+}
+
+li:hover>ul{
+    display: block;
+}
+
 #body{
 	width: 100%;
 	height: 0px;
@@ -114,15 +109,14 @@ ul li ul li {
     left: 10px; 
 }
 
-    .logo .imgnav{
-           
-           float: left;
-            left: 10px;
-            width:100px;
-            height: 100%;
-            top: 3px;
-            margin-bottom: 5px;
-    } 
+.logo .imgnav{           
+    float: left;
+    left: 10px;
+    width:100px;
+    height: 100%;
+    top: 3px;
+    margin-bottom: 5px;
+} 
 
 header .btn_hamburger{
     display: none;
@@ -139,11 +133,10 @@ header .btn_hamburger{
 
 header .btn_hamburger div{
     width: 90%;
-    height: 7px;
-    border-radius: 3px;
+    height: 5px;
+    border-radius: 5px;
     background-color: white;
 }
-
 
 /* Quienes Somos */
 /* .quienes{
@@ -156,7 +149,6 @@ header .btn_hamburger div{
     flex-wrap: wrap;
     justify-content: space-between;
     background-image: url(img/form_fondo.jpg);
-    /* background-color: rgb(102, 185, 206); */
 }
 
 .container_1 .box{
@@ -261,7 +253,6 @@ a.info{
     box-shadow: 0 2px 5px rgba(0,0,0,.2);
 }
 
-
 /*CUERPO*/
 
 .informacion{
@@ -270,11 +261,6 @@ a.info{
     background-color: rgb(16, 117, 189);
 }
 
-
-
-
-
-/*455961-30383f*/
 footer {
     position: relative;
     align-self: flex-end;
@@ -289,7 +275,7 @@ footer {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-  }
+}
 
 .redes-sociales{
     width: 100%;
@@ -310,7 +296,7 @@ footer {
 }
 
 .enlace-mail:hover>.span-email{
-   width: 233px;
+    width: 233px;
     transition: .3s;
     list-style: none;
     text-decoration: none;
@@ -331,9 +317,7 @@ footer {
 
 .icon-email{
     position: relative;
- }
-
-
+}
 
 .enlace-facebook{
     display: flex;
@@ -347,16 +331,16 @@ footer {
 
 .enlace-facebook:hover>.span-facebook{
     width: 180px;
-     transition: .3s;
-     list-style: none;
-     text-decoration: none;
-     color: white;
-     display: flex;
-     align-items: center;
-     position: relative;
- }
+    transition: .3s;
+    list-style: none;
+    text-decoration: none;
+    color: white;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
 
- .span-facebook{
+.span-facebook{
     font-size: 20px;
     width: 180px; 
     display: none;
@@ -509,7 +493,6 @@ footer {
     justify-content: center;
 }
 
-/*2196f3 - 00ff00*/
 .pregunta-span{
     background: #2196f3;
     transition: 1s;
@@ -538,8 +521,8 @@ footer {
     color: white;
     font-size:  25px;
     top: 5px;
-   justify-content: center;
-   width: 100%;
+    justify-content: center;
+    width: 100%;
 }
     
 .mensaje2{
@@ -558,175 +541,211 @@ footer  hr{
 
 /*RESPONSIVE*/
 @media screen and (min-width:320px){
-    header nav ul li a{
-        width: 100vw;
-    }
-    .logo{
-        left: 35.5vw;
-    }
-
-    header .btn_hamburger{
-        display: flex;
-    }
-
-    header nav ul{
-        overflow: hidden;
-        width: 100vw;
-        transition: max-height 1s ease-in;    
-    }
+/*responsivo del nav*/
+.logo .imgnav{
+    width: 6em;
+    height: 3em;
+}
     
-    header nav ul.hidden{
-        max-height: 0vh;
-        transition: max-height 1s ease-in;
-    }   
-
-    header nav ul.hidden .btn_hamburger div:nth-child(1){
-        width: 60%;
-        transition: width 0.1s linear;
-    }
-
-    header nav ul.hidden .btn_hamburger div:nth-child(3){
-        width: 60%;
-        transition: width 0.1s linear;
-    }
+header nav ul li a{
+    width: 100vw;
+    font-size: 1em;
+}
+    
+.logo{
+    left: 35.5vw;
+}
+    
+header .btn_hamburger{
+    display: flex;
+    width: 2em;
+    height: 2em;
+    position: absolute;
+    top: 40px;
+    right: 15px;
+}
+    
+header nav ul{
+    overflow: hidden;
+    width: 100vw;
+    transition: max-height 1s ease-in;    
+}
+        
+header nav ul.hidden{
+    max-height: 0vh;
+    transition: max-height 1s ease-in;
+}   
+    
+header nav ul.hidden .btn_hamburger div:nth-child(1){
+    width: 60%;
+    transition: width 0.1s linear;
+}
+    
+header nav ul.hidden .btn_hamburger div:nth-child(3){
+    width: 60%;
+    transition: width 0.1s linear;
+}
 }
 
 
 @media screen and (min-width:481px){
-    header nav ul li a{
-        width: 100vw;
-    }
+/*responsive del nav*/
+.logo .imgnav{
+    width: 8em;
+    height: 5em;
+}
 
-    .logo{
-        left: 41vw;
-    }
+header nav ul li a{
+    width: 100vw;
+    font-size: 1.1em;
+}
 
-    header .btn_hamburger{
-        display: flex;
-    }
+.logo{
+    left: 38vw;
+}
 
-    header nav ul{
-        overflow: hidden;
-        width: 100vw;
-        transition: max-height 1s ease-in;    
-    }
+header .btn_hamburger{
+    display: flex;
+    width: 3em;
+    height: 3em;
+    position: absolute;
+    top: 50px;
+    right: 15px;
+}
+
+header nav ul{
+    overflow: hidden;
+    width: 100vw;
+    transition: max-height 1s ease-in;    
+}
     
-    header nav ul.hidden{
-        max-height: 0vh;
-        transition: max-height 1s ease-in;
-    }   
+header nav ul.hidden{
+    max-height: 0vh;
+    transition: max-height 1s ease-in;
+}   
 
-    header nav ul.hidden .btn_hamburger div:nth-child(1){
-        width: 60%;
-        transition: width 0.1s linear;
-    }
+header nav ul.hidden .btn_hamburger div:nth-child(1){
+    width: 60%;
+    transition: width 0.1s linear;
+}
 
-    header nav ul.hidden .btn_hamburger div:nth-child(3){
-        width: 60%;
-        transition: width 0.1s linear;
-    }
+header nav ul.hidden .btn_hamburger div:nth-child(3){
+    width: 60%;
+    transition: width 0.1s linear;
+}
 }
 
 
 @media screen and (min-width:768px){
-    header nav ul li a{
-        width: 100vw;
-    }
-        .logo{
-            left: 43.5vw;
-        }
+/*responsive del nav*/
+.logo .imgnav{
+    width: 8.5em;
+    height: 5em;
+}
+
+header nav ul li a{
+    width: 100vw;
+    font-size: 1.1em;
+}
+
+.logo{
+    left: 43.5vw;
+}
     
-        header .btn_hamburger{
-            display: flex;
-            transition: width 0.5s ease-in;
-        }
+header .btn_hamburger{
+    display: flex;
+    transition: width 0.5s ease-in;
+    width: 3em;
+    height: 3em;
+    position: absolute;
+    top: 50px;
+    right: 18px;
+}
     
-        header nav ul{
-            overflow: hidden;
-            width: 100vw;
-            transition: max-height 1s ease-in;    
-        }
+header nav ul{
+    overflow: hidden;
+    width: 100vw;
+    transition: max-height 1s ease-in;    
+}
    
-        header nav ul.hidden{
-            max-height: 0vh;
-            transition: max-height 1s ease-in;
-        }   
+header nav ul.hidden{
+    max-height: 0vh;
+    transition: max-height 1s ease-in;
+}   
     
-        header nav ul.hidden .btn_hamburger div:nth-child(1){
-            width: 60%;
-            transition: width 0.1s linear;
-        }
+header nav ul.hidden .btn_hamburger div:nth-child(1){
+    width: 60%;
+    transition: width 0.1s linear;
+}
     
-        header nav ul.hidden .btn_hamburger div:nth-child(3){
-            width: 60%;
-            transition: width 0.1s linear;
-        }
-    
-        
-    }
+header nav ul.hidden .btn_hamburger div:nth-child(3){
+    width: 60%;
+    transition: width 0.1s linear;
+}          
+}
 
 
 
 
 @media screen and (min-width:1025px){
-    .col-3{
-        flex-basis: calc(100%/3);
-    }
+/*responsive del nav*/
+.logo .imgnav{
+    width: 6em;
+    height: 2.9em;
+}
 
-    /*nav*/
-        
-    header nav ul li a{
-        width: 100%;
-    }
+.col-3{
+    flex-basis: calc(100%/3);
+}
 
-    header .btn_hamburger{
-        display: none;
-        overflow: hidden;
-    }
-        .logo{
-            left: 10px;
-        }
-    
-        header nav ul{
-            overflow: visible;
-            width: 100vw;
-            transition: max-height 1s ease-in;    
-        }
-        ul li ul li {
-            float: left;
-            }
-            
-            
-            
-            ul li ul{
-                display: none;
-                position: relative;
-                width: 200px;
-                padding: 10px 15px;
-            
-            }
-            li:hover>ul{
-                display: block;
-            
-            }
-        header nav ul.hidden{
-            max-height: 100vh;
-            transition: max-height 1s ease-in;
-        }   
-    
-        header nav ul.hidden .btn_hamburger div:nth-child(1){
-            width: 60%;
-            transition: width 0.1s linear;
-        }
-    
-        header nav ul.hidden .btn_hamburger div:nth-child(3){
-            width: 60%;
-            transition: width 0.1s linear;
-        }
-    
-    
-    
+/*nav*/        
+header nav ul li a{
+    width: 100%;
+    font-size: 18px;
+}
 
+header .btn_hamburger{
+    display: none;
+    overflow: hidden;
+}
 
+.logo{
+    left: 10px;
+}
+    
+header nav ul{
+    overflow: visible;
+    width: 100vw;
+    transition: max-height 1s ease-in;    
+}
 
+ul li ul li {
+    float: left;
+}
+                        
+ul li ul{
+    display: none;
+    position: relative;
+    width: 200px;
+    padding: 10px 15px;        
+}
+
+li:hover>ul{
+    display: block;        
+}
+
+header nav ul.hidden{
+    max-height: 100vh;
+    transition: max-height 1s ease-in;
+}   
+    
+header nav ul.hidden .btn_hamburger div:nth-child(1){
+    width: 60%;
+    transition: width 0.1s linear;
+}
+    
+header nav ul.hidden .btn_hamburger div:nth-child(3){
+    width: 60%;
+    transition: width 0.1s linear;
+}
 }
