--- a/Bayser-Portal/Ventas/venta.css
+++ b/Bayser-Portal/Ventas/venta.css
@@ -229,7 +229,7 @@ ul,ol{
 	height: 100%;
 	display: flex;
 	align-items: center;
-	color: #333333;
+	color: #2196f3;
 	font-size: 35px;
 	cursor: pointer;
 	z-index: 2;
