--- a/Bayser-Portal/bayser diseño 2/estilolanding.css
+++ b/Bayser-Portal/bayser diseño 2/estilolanding.css
@@ -556,7 +556,7 @@ footer{
 
 .icono-ubicacion{
     display: inline;
-    height: inherit;
+    /* height: inherit; */
 }
 
 .icon-location{
@@ -571,7 +571,7 @@ footer{
 
 .icono-horario{
     display: inline;
-    height: inherit;
+    /* height: inherit; */
 }
 
 .icon-time{
