--- a/Bayser-Portal/Instalaciones/instalacion.css
+++ b/Bayser-Portal/Instalaciones/instalacion.css
@@ -1256,7 +1256,7 @@ header nav ul.hidden .btn_hamburger div:nth-child(3){
 }
 
 .imagenventa .pick{
-    flex-basis: calc(100%/6);
+    flex-basis: 100%;
     height: 360px;
 }
 
@@ -1276,7 +1276,7 @@ header nav ul.hidden .btn_hamburger div:nth-child(3){
 
 .col-m-2{
     display: flex;
-    width: 40%;
+    width: 70%;
    /* border:1px solid red;
     background: blue;*/
     margin: 30px;
